--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbooks.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbooks.tmpl
@@ -1,9 +1,9 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Cataloging Home<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha &rsaquo; Cataloguing<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
 
-	<h1>Catalog Maintenance</h1>
+	<h1>Koha &rsaquo; Catalogue Maintenance</h1>
 	<!-- TMPL_IF name="noitemsfound" -->
 		No items found
 	<!-- /TMPL_IF -->
