--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
@@ -20,7 +20,7 @@
 	</h1>
 	<!-- TMPL_ELSE -->
 	<h1 >
-		Modify children borrower <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" -->
+		Modify child borrower <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" -->
 	</h1>
 	<!-- /TMPL_IF -->
 	<!-- TMPL_IF NAME="check_member" -->
