--- a/koha-tmpl/intranet-tmpl/prog/en/reviews/reviewswaiting.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reviews/reviewswaiting.tmpl
@@ -1,9 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-Reviews waiting for Approval --
+Koha &rsaquo; Reviews waiting for Approval &rsaquo;
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
-<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
+<!--TMPL_INCLUDE NAME="menu-reviews.inc" -->
 
 <h1>Reviews</h1>
 
@@ -43,7 +43,7 @@ Reviews waiting for Approval --
     <!-- /TMPL_LOOP -->
 </table>
 <!-- TMPL_ELSE -->
-<b>No review has to be approved or deleted.</b>
+<b>No reviews awaiting approval or deletion</b>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
