--- a/koha-tmpl/intranet-tmpl/prog/en/reports/borrowers_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/borrowers_out.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Reports --<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha &rsaquo; Reports<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!--TMPL_INCLUDE NAME="menus.inc" --><!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
 <!-- Additions to enable Calendar system -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-system.css">
@@ -77,7 +77,7 @@
             <tr class="hilighted">
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td>Borrower Category</td>
+                <td>Borrower category</td>
                 <td><input type="text" name="Filter" value="" /></td>
             </tr>
             <tr class="hilighted">
