--- a/koha-tmpl/intranet-tmpl/prog/en/reports/reports-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/reports-home.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Reports --<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha &rsaquo; Reports <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc"-->
 <!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
 <!-- Additions to enable Calendar system -->
@@ -12,7 +12,7 @@
 
 <h1>Reports</h1>
 
-	<h2>Stat wizards</h2>
+	<h2>Statistics wizards</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/acquisitions_stats.pl">Acquisitions</a></li>
 		<li><a href="/cgi-bin/koha/reports/borrowers_stats.pl">Borrowers</a></li>
@@ -23,22 +23,20 @@
 
 	<h2>Top Lists</h2>
 	<ul>
-		<li><a href="/cgi-bin/koha/reports/bor_issues_top.pl">Most issuing Borrowers</a></li>
+		<li><a href="/cgi-bin/koha/reports/bor_issues_top.pl">Most issuing borrowers</a></li>
 		<li><a href="/cgi-bin/koha/reports/cat_issues_top.pl">Most issued items</a></li>
 	</ul>
-	<h2>Outsiders</h2>
+	<h2>Inactive</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/borrowers_out.pl">Borrowers without issues</a></li>
 		<li><a href="/cgi-bin/koha/reports/catalogue_out.pl">Items not issued</a></li>
 	</ul>
 
 
-	<h2>Other stats</h2>
-	<p>on catalogue</p>
+	<h2>Other</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=itemtypes">Catalogue by itemtype</a></li>
 	</ul>
-	<p>on issues</p>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=issues_by_borrower_category">Issues by borrower category</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_avg_stats.pl">Average loan time</a></li>
