--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/acqui-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/acqui-home.tmpl
@@ -67,7 +67,7 @@
 <div id="acqui_acqui_home_budgets">
     <!-- TMPL_IF name="nobudget" -->
     <!-- TMPL_ELSE -->
-    <h2>Budgets and Bookfunds</h2>
+    <h2>Budgets and Funds</h2>
     <a href="/cgi-bin/koha/admin/aqbookfund.pl" title="[ Manage Bookfunds ]">[ Manage ]</a>
     <table>
         <tr>
