--- a/koha-tmpl/intranet-tmpl/prog/en/circ/branchoverdues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/branchoverdues.tmpl
@@ -113,12 +113,12 @@
             <!-- /TMPL_LOOP -->
         </table>
     <!-- TMPL_ELSE -->
-        There is no overdues for your library today
+        There are no overdues for your library today
     <!-- /TMPL_IF -->
     </fieldset>
 <!-- TMPL_IF name="todayoverduesloop" -->
     <fieldset id="branch_odues_today_odues">
-    <legend>Notifys of the day</legend>	
+    <legend>Today's notifications</legend>	
         <table>
         <tr>
             <th class="circulation">Date_due</th>
