--- a/koha-tmpl/intranet-tmpl/prog/en/barcodes/printerConfig.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/barcodes/printerConfig.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-barcodes.inc" -->Koha Printer Configuration
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha Printer Configuration
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-barcodes.inc" -->
