--- a/koha-tmpl/intranet-tmpl/prog/en/authorities/blinddetail-biblio-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/authorities/blinddetail-biblio-search.tmpl
@@ -1,13 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<!-- TMPL_IF NAME="TemplateEncoding" -->
-    <meta http-equiv="Content-Type" content="text/html; charset=<!-- TMPL_VAR NAME="TemplateEncoding" -->">
-<!-- TMPL_ELSE -->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<!-- /TMPL_IF -->
-
-<body>
-<script language="JavaScript" type="text/javascript">
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+<script type="text/javascript">
 
 function go()
 {
@@ -61,5 +53,4 @@ while (i>=0) {
 <script language="javascript" type="text/javascript">
 window.onload = go();
 </script>
-</body>
-</html>
+<!-- TMPL_INCLUDE NAME="intranet-bottom" -->
