--- a/koha-tmpl/intranet-tmpl/prog/en/installer/step2.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/installer/step2.tmpl
@@ -1,5 +1,7 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo; Web Installer &rsaquo; Step 2
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo; Web Installer &rsaquo; Step 2</title>
 <!-- TMPL_INCLUDE NAME="installer-doc-head-close.inc" -->
+<div>
+<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/en/images/koha.org-logo.gif" /></h1>
 <h1>Koha &rsaquo; Web Installer &rsaquo; Step 2</h1>
 <h2 align="center">Database settings:</h2>
 <ul>
