--- a/koha-tmpl/intranet-tmpl/prog/en/installer/step3.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/installer/step3.tmpl
@@ -1,5 +1,7 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo; Web Installer &rsaquo; Step 3
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo; Web Installer &rsaquo; Step 3</title>
 <!-- TMPL_INCLUDE NAME="installer-doc-head-close.inc" -->
+<div>
+<h1 id="logo"><img alt="Koha" src="/intranet-tmpl/prog/en/images/koha.org-logo.gif" /></h1>
 <h1>Koha &rsaquo; Web Installer &rsaquo; Step 3</h1>
 <!--TMPL_IF NAME="selectframeworks"-->
 <script language="JavaScript">
@@ -75,11 +77,12 @@ function Hide(link) {
 <!--/TMPL_IF-->
 
 <!--TMPL_IF Name="selectframeworks"-->
-  <h2 align="center">Selecting Frameworks</h2>
+  <h2 align="center">Selecting Default Settings</h2>
   <form name="frameworkselection" method="post" action="install.pl">
   <input type="hidden" name="step" value="3" />
   <input type="hidden" name="op" value="addframeworks" />
-  <p>Please select a framework language you want to import:</p>
+  <p>Each language has a set of default settings that cover a wide range of configuration options. Please select a language from the dropdown or use the default lanaguage already selected.</p>
+
   <p><select name="fwklanguage" onchange="javascript:refresh(this.value)">
   <!--TMPL_LOOP Name="languagelist" -->
   <!--TMPL_IF Name="checked"--><option value="<!--TMPL_VAR Name="dirname"-->" selected ><!--TMPL_VAR Name="languagedescription"--></option>
@@ -88,29 +91,26 @@ function Hide(link) {
   <!--/TMPL_LOOP-->
   </select>
   </p>
-  <p><!--TMPL_LOOP Name="levelloop"-->
-  <a id="link<!--TMPL_VAR Name="code"-->" style="color: grey; cursor: se-resize;"  onclick="Hide('<!--TMPL_VAR Name="code"-->')">+</a>
-  <!--TMPL_VAR Name="label"-->
-  <!--/TMPL_LOOP-->
-  </p>
   <p>
   <!--TMPL_LOOP Name="levelloop"-->
-  <div id="bloc<!--TMPL_VAR Name="code"-->" style="display:none">
+  <div>
   <h3><!--TMPL_VAR Name="label"--></h3>
   <!--TMPL_LOOP Name="frameworks"-->
-    <p><em><!--TMPL_VAR Name="fwkname"--></em>
+    <div style="border:1px;">
+    <p>
     <!--TMPL_IF Name="mandatory"--><input type="checkbox" Name="framework" value="<!--TMPL_VAR Name="fwkfile"-->" checked />
     <!--TMPl_ELSE--><input type="checkbox" Name="framework" value="<!--TMPL_VAR Name="fwkfile"-->" />
-    <!--/TMPL_IF--><br />
+    <!--/TMPL_IF-->
     <!--TMPL_VAR Name="fwkdescription"-->
+    <em>(<!--TMPL_VAR Name="fwkname"-->)</em>
     </p>
+    </div>
   <!--/TMPL_LOOP-->
   </div>
   </p>
   <!--/TMPL_LOOP-->
-  <p>Hint: You can select specific frameworks from each framework set by clicking on the <code>+</code> to expand.</p>
   <p>When you've made your selections, please click 'Import' below to begin the process. It may take a while to complete,
-  please be patient</p>
+  please be patient.</p>
   <p><input type="submit" value="import" />
   </p>
   </form>
@@ -150,20 +150,29 @@ function Hide(link) {
   <ul>
   <li>Database tables created</li>
   </ul>
- 		<a href="install.pl?step=3" class="button">Click here</a> to continue.
+  <form action="install.pl">
+  <input type="hidden" name="step" value="3" />
+  <p> Click Next to continue <input value="Next &gt;&gt;" type="submit"></p>
+  </form>
+
 	<!-- /TMPL_IF -->
 <!--/TMPL_IF-->
 <!--TMPL_IF Name="proposeimport"-->
   <p>Now we're ready to create the database tables and fill them with some default data.</p>
-<a href="install.pl?step=3&amp;op=importdatastructure" class="button">Click here</a> to continue.
+  <form action="install.pl">
+  <input type="hidden" name="step" value="3" />
+  <input type="hidden" name="op" value="importdatastructure"/>
+  <p> Click Next to continue <input value="Next &gt;&gt;" type="submit"></p>
+  </form>
+
 
 <!--/TMPL_IF-->
 <!--TMPL_IF Name="default"-->
 
-You can now <a href="install.pl?step=3&amp;op=updatestructure" class="button">update your database</a>
-structure to the latest version if you are upgrading from a previous version of Koha.
+<p>Now we're ready to do some basic configuration. Please <a href="install.pl?step=3&amp;op=selectframeworks" class="button">install basic configuration settings</a> to continue the installation.</p>
+<p>
+Alternatively, if you are upgrading from a previous version of Koha, you can <a href="install.pl?step=3&amp;op=updatestructure" class="button">update your database</a>. Otherwise, you can skip this step.
 </p>
-<p>Otherwise, <a href="install.pl?step=3&amp;op=selectframeworks" class="button">select frameworks to import</a> to continue the installation.</p>
 
 <!--/TMPL_IF-->
 <!--TMPL_IF Name="updatestructure"-->
@@ -179,5 +188,6 @@ structure to the latest version if you are upgrading from a previous version of 
 <a href="install.pl?step=3&amp;op=selectframeworks" class="button">Continue to Framework Selection</a>
   </div>
 <!--/TMPL_IF-->
+</div>
 </body>
 </html>
